# dancecardapp

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  railway.json  run.sh  schema.sql
.claude/: AIR_WEB_FRAMEWORK.md  settings.local.json
app/: __init__.py  auth.py  db.py  models.py  qrcode_gen.py  services.py  user_service.py  utils.py
docs/: bridgerton_dance_card.md  bridgerton_dance_card_sdd.md  bridgerton_dance_card_ux.md  prompts.md
templates/: base.html  dashboard.html  error.html  login.html  scan_step1.html  scan_step3.html  scan_step4.html  signup.html
