[project]
name = "pythonasia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "air>=0.47.0",
    "airmodel>=0.4.2",
    "bcrypt>=5.0.0",
    "hypercorn>=0.18.0",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.2",
    "qrcode[pil]>=8.2",
    "structlog>=25.5.0",
]

[tool.fastapi]
app = "main:app"
